It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Jun 13, 2009
---------------------------------------------------------------------
- Upgraded to work with Rails 2.3.2
- Upgraded [rspec], [rspec-rails], and [open-id-authentication] plugins.
- Upgraded [acts-as-paranoid] plugin.
- Fixed task title naming issue.
- Fixed opportunity unique index issue (SQLite).
- Tagged 0.9.0 to build downloadable distributions on Github.

Thu, Jun 11, 2009
---------------------------------------------------------------------
- Finished user options for the Recent Activity (LH #46).
- Fixed sporadic spec failures when running with SQLite.

Wed, Jun 10, 2009
---------------------------------------------------------------------
- Implemented options for Opportunities and Contacts.
- Started with the options for the Recent Activity.

Tue, Jun 9, 2009
---------------------------------------------------------------------
- Implemented options for Accounts.

Sun, Jun 6, 2009
---------------------------------------------------------------------
- Implemented options for Leads.
- Happy birthday, Rema!

Thu, Jun 4, 2009
---------------------------------------------------------------------
- Implemented :sort_by option for Campaigns.
- Wrote specs and finished [Options] for Campaigns.

Wed, Jun 3, 2009
---------------------------------------------------------------------
- Implemented :per_page, and :format user preferences for Campaigns.
- Revisited user Preference model and wrote full spec coverage.
- Refactored application.js to simplify remote form updates.
- Updated stylesheets to support long and brief list formats.

Tue, Jun 2, 2009
---------------------------------------------------------------------
- Added [Options] form for Campaigns with all preferences stubbed.

Mon, Jun 1, 2009
---------------------------------------------------------------------