@@ -7,13 +7,14 @@
     = stylesheet_link_tag "screen", :cache => "cache/all"
     - unless tabless_layout?
       = stylesheet_link_tag "calendar_date_select/default.css"
+      = stylesheet_link_tag "/facebox/facebox.css"
     %style= yield :styles
 
     = javascript_include_tag :defaults, :cache => "cache/all"
     - if tabless_layout?
       = javascript_include_tag "crm_loginout.js"
     - else
-      = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", :cache => "cache/classes"
+      = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", "/facebox/facebox.js", :cache => "cache/classes"
     %script{:type => "text/javascript"}= yield :javascript
 
   %body
